--- a/src/app/client/profiles/shared/header/header.component.html
+++ b/src/app/client/profiles/shared/header/header.component.html
@@ -1,30 +1,26 @@
 <!-- <div class="desktop dashboard quan-ly nap-tien the-tin-dung loaded ready">
     <div id="webpage"> -->
         <nav class="navbar navbar-expand-md fixed-top flex-md-nowrap p-0" id="mobile_navbar_top">
-            <a class="navbar-brand col-sm-3 col-md-2 mr-0" routerLink="/client/home">ThanhBinh.com</a>
+            <a class="navbar-brand col-sm-3 col-md-2 mr-0" routerLink="/client/home">ThanhXuan.com</a>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
                         <a class="nav-link" routerLink="/client/home">Trang chủ</a>
                     </li>
-
                     <li class="nav-item d-none d-md-block">
-                        <a class="nav-link" target="_blank" href="https://phongtro123.com/cho-thue-phong-tro">Phòng trọ</a>
+                        <a class="nav-link" routerLink="/rent-room">Tìm phòng trọ</a>
                     </li>
                     <li class="nav-item d-none d-md-block">
-                        <a class="nav-link" target="_blank" href="https://phongtro123.com/nha-cho-thue">Nhà cho thuê</a>
+                        <a class="nav-link" routerLink="/room-mates">Tìm người ở ghép</a>
                     </li>
                     <li class="nav-item d-none d-md-block">
-                        <a class="nav-link" target="_blank" href="https://phongtro123.com/cho-thue-can-ho">Căn hộ</a>
+                        <a class="nav-link" routerLink="/blog">Blog</a>
                     </li>
                     <li class="nav-item d-none d-md-block">
-                        <a class="nav-link" target="_blank" href="https://phongtro123.com/cho-thue-mat-bang">Mặt bằng</a>
+                        <a class="nav-link" routerLink="/profile/paypal-view">Nạp tiền</a>
                     </li>
                     <li class="nav-item d-none d-md-block">
-                        <a class="nav-link" target="_blank" href="https://phongtro123.com/tim-nguoi-o-ghep">Ở ghép</a>
-                    </li>
-                    <li class="nav-item d-none d-md-block">
-                        <a class="nav-link" target="_blank" href="https://phongtro123.com/bang-gia-dich-vu">Bảng giá dịch vụ</a>
+                        <a class="nav-link" routerLink="/profile/price-list">Bảng giá dịch vụ</a>
                     </li>
 
                 </ul>
