handle multi files : favorite, paypal ...

--- a/src/app/admin/article-manager/detail-article/detail-article.component.html
+++ b/src/app/admin/article-manager/detail-article/detail-article.component.html
@@ -20,7 +20,7 @@
                                 </div>
                             </div>
                             <div class="row mt-3">
-                                <div class="col-md-3">
+                                <div class="col-md-4">
                                     <div class="form-group">
                                         <label for="province_id" class="col-form-label">Tỉnh/Thành phố</label>
                                         <label id="province_id" name="province_id"
@@ -31,7 +31,7 @@
                                         </label>
                                     </div>
                                 </div>
-                                <div class="col-md-3">
+                                <div class="col-md-4">
                                     <div class="form-group">
                                         <label class="col-form-label" for="district_id">Quận/Huyện</label>
                                         <label name="district_id" id="district_id"
@@ -42,7 +42,7 @@
                                         </label>
                                     </div>
                                 </div>
-                                <div class="col-md-3">
+                                <div class="col-md-4">
                                     <div class="form-group">
                                         <label class="col-form-label" for="phuongxa">Phường/Xã</label>
                                         <label class="form-control js-select-phuongxa select2-hidden-accessible"
@@ -50,15 +50,6 @@
                                             {{article?.location.wardName}}
                                         </label>
 
-                                    </div>
-                                </div>
-                                <div class="col-md-3">
-                                    <div class="form-group">
-                                        <label class="col-form-label" for="duong">Số nhà</label>
-                                        <label class="form-control js-select-duong select2-hidden-accessible"
-                                            name="duong" id="duong" tabindex="-1" aria-hidden="true">
-                                            ######
-                                        </label>
                                     </div>
                                 </div>
                             </div>
@@ -80,17 +71,16 @@
                                                 class="red_require">(*)</span></label>
                                         <p>Vị trí tin bài trên bản đồ
                                         </p>
-                                        <div id="maps"
-                                            style="width: 100%; height: 300px; position: relative; overflow: hidden;">
-                                            <iframe
-                                                src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d7838.684254869503!2d106.70676642475235!3d10.785086936675276!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1svi!2s!4v1547181657956"
-                                                width="600" height="450" frameborder="0" style="border:0"
-                                                allowfullscreen></iframe>
+                                        <div id="maps" style="width: 100%; height: 300px; position: relative; overflow: hidden;">
+                                            <!-- <agm-map [zoom]="13" [latitude]="latitude" [longitude]="longitude">
+                                                <agm-marker [latitude]="latitude" [longitude]="longitude">
+                                                    <agm-info-window><strong>{{article?.location.wardName}}, {{article?.location.districtName}}, {{article?.location.cityName}}</strong></agm-info-window>
+                                                </agm-marker>
+                                            </agm-map> -->
                                         </div>
                                     </div>
                                 </div>
                             </div>
-                            <hr />
 
                             <div class="form-group row mt-5">
                                 <div class="col-md-12">
