--- a/src/app/client/clients-page/shared/header/header.component.html
+++ b/src/app/client/clients-page/shared/header/header.component.html
@@ -54,7 +54,7 @@
                         </li>
                         <li>
                             <a class="dropdown-menu-item tin-da-luu" rel="nofollow"
-                                ><i></i> Tin đã lưu
+                                routerLink="/profile/favorite-article"><i></i> Tin đã lưu
                             </a>
                         </li>
                         <li (click)="logout()">
