--- a/src/app/client/profiles/paypal/view-paypal/view-paypal.component.html
+++ b/src/app/client/profiles/paypal/view-paypal/view-paypal.component.html
@@ -169,9 +169,9 @@
             <h3 class="heading" style="margin-top: 0; margin-bottom: 0; color: #28a745;"><strong>{{customerModel?.accountBalance}}đ</strong></h3>
         </div>
     </div>
-    <a class="btn btn-secondary btn-block" href="https://phongtro123.com/quan-ly/lich-su-nap-tien.html">Lịch sử nạp tiền <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a>
-    <a class="btn btn-secondary btn-block" href="https://phongtro123.com/quan-ly/lich-su-thanh-toan.html">Lịch sử thanh toán <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a>
-    <a class="btn btn-secondary btn-block" href="https://phongtro123.com/bang-gia-dich-vu">Bảng giá dịch vụ <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a>
+    <a class="btn btn-secondary btn-block" routerLink="/profile/recharge-history">Lịch sử nạp tiền <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a>
+    <a class="btn btn-secondary btn-block" routerLink="/profile/payment-history">Lịch sử thanh toán <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a>
+    <a class="btn btn-secondary btn-block" routerLink="/profile/price-list">Bảng giá dịch vụ <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg></a>
 </div>
 </div>
 
@@ -183,18 +183,18 @@
     <div class="list-support-title">Liên hệ với chúng tôi nếu bạn cần hỗ trợ:</div>
     <div class="support-item">
         <span class="support-item-title">Hỗ trợ thanh toán</span>
-        <a rel="nofollow" href="tel:0917686101">Điện thoại: 0917686101</a>
-        <a rel="nofollow" target="_blank" href="https://zalo.me/0917686101">Zalo: 0917686101</a>
+        <a rel="nofollow" href="tel:0973800896">Điện thoại: 0973800896</a>
+        <a rel="nofollow" target="_blank" href="https://zalo.me/0973800896">Zalo: 0973800896</a>
     </div>
     <div class="support-item">
         <span class="support-item-title">Hỗ trợ đăng tin</span>
-        <a rel="nofollow" href="tel:0902657123">Điện thoại: 0902657123</a>
-        <a rel="nofollow" target="_blank" href="https://zalo.me/0902657123">Zalo: 0902657123</a>
+        <a rel="nofollow" href="tel:0973800896">Điện thoại: 0973800896</a>
+        <a rel="nofollow" target="_blank" href="https://zalo.me/0973800896">Zalo: 0973800896</a>
     </div>
     <div class="support-item">
         <span class="support-item-title">Hotline 24/7</span>
-        <a rel="nofollow" href="tel:0917686101">Điện thoại: 0917686101</a>
-        <a rel="nofollow" target="_blank" href="https://zalo.me/0917686101">Zalo: 0917686101</a>
+        <a rel="nofollow" href="tel:0973800896">Điện thoại: 0973800896</a>
+        <a rel="nofollow" target="_blank" href="https://zalo.me/0973800896">Zalo: 0973800896</a>
     </div>
     <a class="btn btn-page-contact" rel="nofollow" href="https://phongtro123.com/lien-he">Gửi liên hệ</a>
 </div> 
@@ -244,7 +244,7 @@
                                         <a target="_blank" style="display: inline-block; margin-right: 5px;" href="https://www.facebook.com/phongtro123.com.vn/"><img style="border: 1px solid #32599d; border-radius: 50%;" src="./#99624 - Nạp tiền vào tài khoản - Phongtro123.com_files/icon_facebook.svg" width="30"></a>
                                         <a target="_blank" style="display: inline-block; margin-right: 5px;" href="https://plus.google.com/+Phongtro123chothuenhatro"><img style="border: 1px solid #df3f31; border-radius: 50%;" src="./#99624 - Nạp tiền vào tài khoản - Phongtro123.com_files/icon_google.svg" width="30"></a>
                                         <a target="_blank" style="display: inline-block; margin-right: 5px;" href="https://zalo.me/273083239502498077"><img style="border: 1px solid #00a1dc; border-radius: 50%;" src="./#99624 - Nạp tiền vào tài khoản - Phongtro123.com_files/icon_zalo.svg" width="30"></a>
-                                        <a target="_blank" style="display: inline-block; margin-right: 5px;" href="viber://chat?number=0917686101"><img style="border: 1px solid #9f1cb8; border-radius: 50%;" src="./#99624 - Nạp tiền vào tài khoản - Phongtro123.com_files/icon_viber.svg" width="30"></a>
+                                        <a target="_blank" style="display: inline-block; margin-right: 5px;" href="viber://chat?number=0973800896"><img style="border: 1px solid #9f1cb8; border-radius: 50%;" src="./#99624 - Nạp tiền vào tài khoản - Phongtro123.com_files/icon_viber.svg" width="30"></a>
                                         <a target="_blank" style="display: inline-block;" href="https://twitter.com/phongtro123"><img style="border: 1px solid #54a3de; border-radius: 50%;" src="./#99624 - Nạp tiền vào tài khoản - Phongtro123.com_files/icon_twitter.svg" width="30"></a>
                                     </div>
                                     <div class="footer_col_header">Phương thức thanh toán</div>
@@ -261,9 +261,9 @@
                             <div class="footer_bottom">
                                 <div class="w980">
                                     <p class="company_name"><strong>CÔNG TY TNHH LBKCORP</strong></p>
-                                    <p><strong>Tổng đài CSKH: 0917.686.101</strong></p>
+                                    <p><strong>Tổng đài CSKH: 0973800896</strong></p>
                                     <p>Copyright © 2015 - 2021 Phongtro123.com</p>
-                                    <p>Email: cskh.phongtro123@gmail.com | lienhe.phongtro123@gmail.com</p>
+                                    <p>Email: cskh.phongtro@gmail.com | lienhe.phongtro@gmail.com</p>
                                     <p>Địa chỉ: LE-4.07, Toà nhà Lexington Residence, Số 67 Mai Chí Thọ, Phường An Phú, Quận 2, Tp. Hồ Chí Minh.</p>
                                     <p>Giấy phép đăng ký kinh doanh số 0313588502 do Sở kế hoạch và Đầu tư thành phố Hồ Chí Minh cấp ngày 30 tháng 3 năm 2017.</p>
                                     <!-- <center style="display: flex; align-items: center; justify-content: center;">
