--- a/src/app/admin/newspaper-manager/view-newspaper/view-newspaper.component.html
+++ b/src/app/admin/newspaper-manager/view-newspaper/view-newspaper.component.html
@@ -121,6 +121,8 @@
                               </li>
                               <li class="page-item" *ngFor="let item of arrayPage">
                                   <a class="page-link" routerLink="/admin/newspaper" (click)="onPage(item)">{{item+1}}</a>
+                                  <!-- <a class="page-link" *ngIf="item <= 2 || item >= news[0].pages-1 " routerLink="/admin/newspaper" (click)="onPage(item)">{{item+1}}</a>
+                                  <a class="page-link" *ngIf="item > 2 && item < news[0].pages-1 " routerLink="/admin/newspaper" (click)="onPage(item)">**</a> -->
                               </li>
                               <li class="page-item">
                                 <a class="page-link" href="#" aria-label="Next">
