--- a/src/app/client/profiles/paypal/confirm-payment/confirm-payment.component.html
+++ b/src/app/client/profiles/paypal/confirm-payment/confirm-payment.component.html
@@ -12,7 +12,7 @@
             <h5>Tương đương : {{vnd}} VNĐ</h5>
             <div class="from">
             <div class="submit-btn">
-                <button id="login" (click)="clickToastr()" routerLink="/client/profile/paypal-view">Xác Nhận</button>
+                <button id="login" (click)="clickToastr()" routerLink="/profile/paypal-view">Xác Nhận</button>
             </div>
             </div>
         </div>
