--- a/src/app/client/profiles/paypal/confirm-payment/confirm-payment.component.css
+++ b/src/app/client/profiles/paypal/confirm-payment/confirm-payment.component.css
@@ -184,7 +184,8 @@
     text-align: center;
   }
   .from-content h5 {
-    margin-left: 20px;
+    font-size: 15px;
+    margin-left: 40px;
   }
   .from-content .mark {
     color: #8C8889;
