--- a/src/app/client/profiles/paypal/handle-paypal/handle-paypal.component.html
+++ b/src/app/client/profiles/paypal/handle-paypal/handle-paypal.component.html
@@ -91,7 +91,7 @@
                                                         </div>
                                                     </div>
                                                 </div>
-                                                <br>
+                                                <!-- <br>
                                                 <p>Mô tả</p>
                                                 <div class="row">
                                                     <div class="col-md-5 col-sm-12 col-xs-12">
@@ -101,7 +101,7 @@
                                                             </div>
                                                         </div>
                                                     </div>
-                                                </div>
+                                                </div> -->
                                             </div>
                                         </div>
                                     </div>
